--- a/wordpress-local/mysql-deployment.yaml
+++ b/wordpress-local/mysql-deployment.yaml
@@ -61,4 +61,4 @@ spec:
       volumes:
         - name: mysql-persistent-storage
           persistentVolumeClaim:
-            claimName: mysql-pv-claim
+            claimName: mysql-pv-claim-local
