--- a/wordpress-local/wordpress-deployment.yaml
+++ b/wordpress-local/wordpress-deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress
+  name: wordpress-local
   labels:
-    app: wordpress
+    app: wordpress-local
 spec:
   ports:
     - port: 80
   selector:
-    app: wordpress
+    app: wordpress-local
     tier: frontend
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wp-pv-claim
+  name: wp-pv-claim-local
   labels:
-    app: wordpress
+    app: wordpress-local
 spec:
   accessModes:
     - ReadWriteOnce
@@ -27,25 +27,25 @@ spec:
 apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
 kind: Deployment
 metadata:
-  name: wordpress
+  name: wordpress-local
   labels:
-    app: wordpress
+    app: wordpress-local
 spec:
   selector:
     matchLabels:
-      app: wordpress
+      app: wordpress-local
       tier: frontend
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: wordpress
+        app: wordpress-local
         tier: frontend
     spec:
       containers:
         - image: wordpress:5.5.1-apache
-          name: wordpress
+          name: wordpress-local
           env:
             - name: WORDPRESS_DB_HOST
               value: wordpress-mysql
@@ -53,11 +53,11 @@ spec:
               value: test
           ports:
             - containerPort: 80
-              name: wordpress
+              name: wordpress-local
           volumeMounts:
             - name: wordpress-persistent-storage
               mountPath: /var/www/html
       volumes:
         - name: wordpress-persistent-storage
           persistentVolumeClaim:
-            claimName: wp-pv-claim
+            claimName: wp-pv-claim-local
