--- a/wordpress-local/mysql-deployment.yaml
+++ b/wordpress-local/mysql-deployment.yaml
@@ -57,7 +57,7 @@ spec:
               name: mysql
           volumeMounts:
             - name: mysql-persistent-storage
-              mountPath: /var/lib/mysql
+              mountPath: /var/lib/minesql
       volumes:
         - name: mysql-persistent-storage
           persistentVolumeClaim:
