--- a/wordpress-local/mysql-deployment.yaml
+++ b/wordpress-local/mysql-deployment.yaml
@@ -48,7 +48,13 @@ spec:
           name: mysql
           env:
             - name: MYSQL_ROOT_PASSWORD
+              value: example
+            - name: MYSQL_USER
               value: test
+            - name: MYSQL_DATABASE
+              value: database
+            - name: MYSQL_PASSWORD
+              value: password
           livenessProbe:
             tcpSocket:
               port: 3306
